# fxi

./: .gitignore  ARCHITECTURE.md  AUDIT_SEARCH_INDEXING.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  benchmark-plan.md  spec-gaps.md  spec.md
.claude/: settings.local.json
.github/workflows/: ci.yml
benches/: benchmarks.rs  indexing.rs
docs/: DAEMON_API.md  DESIGN_PAGINATION.md  OPTIMIZATION_TECHNIQUES.md  SEMANTICS.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_query_parser.rs  fuzz_trigram.rs
scripts/: benchmark-ab.nu  benchmark-ab.ps1  benchmark-chromium.sh  benchmark.sh  quick-bench.ps1
src/: lib.rs  main.rs  output.rs
src/index/: build.rs  compact.rs  mod.rs  reader.rs  segment_io.rs  stats.rs  types.rs  writer.rs
src/index/suffix_array/: builder.rs  mod.rs  reader.rs  types.rs  writer.rs
src/query/: executor.rs  mod.rs  parser.rs  planner.rs  scorer.rs  wand.rs
src/server/: client.rs  client_unix.rs  client_windows.rs  daemon.rs  daemon_core.rs  daemon_unix.rs  daemon_windows.rs  debouncer.rs  mod.rs  protocol.rs  watcher.rs
src/tui/: app.rs  highlighter.rs  mod.rs  ui.rs
src/utils/: app_data.rs  bloom.rs  encoding.rs  index_lock.rs  mod.rs  progress.rs  tokenizer.rs  trigram.rs
tests/: parity_grid.rs  ripgrep_compat.rs
tests/fixtures/: config.json  lib.rs  main.rs  utils.rs
vscode-extension/: .vscodeignore  esbuild.mjs  package-lock.json  package.json  vitest.config.ts
vscode-extension/src/: extension.ts
vscode-extension/src/__mocks__/: vscode.ts
vscode-extension/src/commands/: daemon.ts  index.ts  reload.ts  search.ts
vscode-extension/src/daemon/: client.test.ts  client.ts  protocol.test.ts  protocol.ts  socket.test.ts  socket.ts
vscode-extension/src/ui/: statusBar.ts  workspace.test.ts  workspace.ts
vscode-extension/src/webview/: SearchPanelProvider.ts  getWebviewContent.test.ts  getWebviewContent.ts  messages.test.ts  messages.ts
