[package]
name = "fxi"
version = "0.1.0"
edition = "2024"
description = "Terminal-first, ultra-fast code search engine"
license = "MIT"
readme = "README.md"

[dependencies]
# Core
memmap2 = "0.9.9"
byteorder = "1.5"
varint-rs = "2.2"

# FST for path store
fst = "0.4"

# Async and parallel processing
rayon = "1.11"
crossbeam-channel = "0.5.15"

# File system
walkdir = "2.5"
ignore = "0.4.21"
globset = "0.4.18"

# Regex
regex = "1.11"

# Performance optimizations
roaring = "0.10"
memchr = "2.7"
lru = "0.12"
ahash = "0.8"

# TUI
ratatui = "0.29"
crossterm = "0.29"

# Syntax highlighting
syntect = "5.2"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# CLI
clap = { version = "4.5.54", features = ["derive"] }

# Progress indicators
indicatif = "0.17"

# Utilities
anyhow = "1.0.100"
thiserror = "2.0"
unicode-segmentation = "1.12"
dirs = "5.0.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
