[package]
name = "fxi"
version = "0.1.0"
edition = "2024"
description = "Terminal-first, ultra-fast code search engine"
license = "MIT"
readme = "README.md"

[features]
default = ["interactive", "daemon", "progress"]
interactive = ["ratatui", "crossterm"]
daemon = []
progress = ["indicatif"]

[dependencies]
# Core
memmap2 = "0.9.9"

# Async and parallel processing
rayon = "1.11"

# File system
ignore = "0.4.21"
globset = "0.4.18"

# Regex
regex = "1.11"

# Performance optimizations
roaring = "0.11"
memchr = "2.7"
lru = "0.16"
ahash = "0.8"
rustc-hash = "2"

# TUI (optional - for interactive mode)
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.29", optional = true }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# CLI
clap = { version = "4.5.54", features = ["derive"] }

# Progress indicators (optional)
indicatif = { version = "0.18", optional = true }

# Utilities
anyhow = "1.0.100"
dirs = "6.0"
libc = "0.2"

# Colored terminal output
termcolor = "1.4"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "indexing"
harness = false

[profile.release]
lto = true
strip = true
panic = "abort"
codegen-units = 1
opt-level = 3
